# Anti-Bot-Bypass-Research

./: .gitignore  README.md  backdate-push.sh  pyproject.toml
data/profiles/: research1.json
data/signatures/: akamai.yaml  datadome.yaml  kasada.yaml  perimeterx.yaml  shape.yaml
src/antibot/: __init__.py  __main__.py  api.py  config.py  database.py  models.py  schemas.py  session.py
src/antibot/alerts/: __init__.py  monitor.py  webhook.py
src/antibot/analyzer/: __init__.py  deobfuscator.py  network.py  replay.py  script_parser.py
src/antibot/dashboard/: app.py  routes.py
src/antibot/dashboard/static/css/: app.css
src/antibot/dashboard/templates/: base.html  fingerprint.html  index.html  results.html  scan.html
src/antibot/detector/: __init__.py  akamai.py  base.py  cloudflare.py  custom.py  datadome.py  engine.py  kasada.py  perimeterx.py  shape.py
src/antibot/distributed/: __init__.py  coordinator.py  worker.py
src/antibot/fingerprint/: __init__.py  collector.py  comparator.py  mutator.py  profiles.py  tls.py  tls_live.py
src/antibot/profiles/: __init__.py  manager.py  profile.py
src/antibot/solver/: __init__.py  akamai.py  base.py  browser.py  cloudflare.py  custom.py  datadome.py  engine.py  human_model.py  kasada.py  perimeterx.py  shape.py
src/antibot/utils/: crypto.py  encoding.py  export.py  http.py  proxy.py
tests/: conftest.py
tests/test_detector/: test_akamai.py  test_cloudflare.py  test_custom.py  test_datadome.py  test_perimeterx.py
tests/test_fingerprint/: test_comparator.py
tests/test_solver/: test_akamai.py
(+1 files in other folders)
